deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opencacao
  labels:
    app.kubernetes.io/part-of: opencacao
